tests/baselines/reference/typeFromPropertyAssignment6.errors.txt
a.js(5,7): error TS2565: Property 'i' is used before being assigned.


==== def.js (0 errors) ====
    class Outer {}
    
==== a.js (1 errors) ====
    Outer.Inner = class I {
        messages() { return [] }
    }
    /** @type {!Outer.Inner} */
    Outer.i
          ~
!!! error TS2565: Property 'i' is used before being assigned.
    
==== b.js (0 errors) ====
    var msgs = Outer.i.messages()
    
    /** @param {Outer.Inner} inner */
    function x(inner) {
    }
    